--- a/index.html
+++ b/index.html
@@ -5,62 +5,64 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Leslie Soto</title>
   <link rel="stylesheet" href="/style.css">
-
-<h2>Leslie</h2>
-<p class="sub-txt">Front-end Developer</p>
-
-<div class="container">
-<ul>
-
-<li><a href="../pages/projecto.html">projects</a></li>
-
-<li><a href="../pages/about-page.html">about</a></li>
-
-<li><a href="../pages/contact.html">contact</a></li>
-</ul>
-
-</div>
-
-
-
-<img src="../images/board.jpg" id="board">
-<h1 id="about">About</h1>
-
-<p id="des"> 
-Hi, I’m Leslie Soto, a web developer passionate about creating clean, functional websites.
- I’ve been building my skills in HTML and CSS over the past year, and I’m currently diving into JavaScript.
-I’m constantly learning and growing in the field, taking on new challenges and projects to strengthen 
-my abilities.
-</p>
-
-<p id="des">Right now, I’m focused on creating landing pages that help businesses communicate their message 
-effectively and engage their audience. I’m particularly passionate about building simple, high-converting 
-landing pages that drive results for businesses.</p>
-
-<img id="code" src="../images/fahrul-razi-BR6lrzCPYPk-unsplash.jpg">
-
-<p id="about2">I take pride in being resourceful and adaptable, always finding 
-creative solutions to problems and collaborating effectively with
- others to achieve the best outcome. My strong work ethic drives 
- me to continuously improve, and I’m excited to tackle new projects 
- that allow me to apply my growing skill set.</p>
-
-
-<h1 id="prohead">projects</h1>
-
-
-<div>
-<a href="../images/grey.jpg"></a>
-<a href="../images/sun.jpg"></a>
-<a href="../images/purple.jpg"></a>
-</div>
-
-<title>contact</title>
 </head>
-<body id="bodycon">
-  <h1 id="contact">contact</h1>
+
+<body>
+  <div class="container">
+<div class="text">
+    <div class="heading">
+    
+      <h2>LESLIE</h2>
+      
+      <p class="sub-txt">Front-end Developer | UI UX Designer</p>
+    </div>
+  <div class="links">
+    <ul>
+      <li><a href="#Projects">Projects</a></li>
+      <li><a href="#About">About</a></li>
+      <li><a href="#Contact">Contact</a></li>
+    </ul>
+</div>
+    </div>
+  </div>
+
+  <section class="about" id="About">
+    <div class="aboutTitle">
+    <h1>About</h1>
+ </div>
+    <p id="des">
+    "Hi, I'm Leslie, a freelance UI/UX designer and junior web developer with a passion for creating responsive,
+    high-converting websites. I specialize in designing clean, user-friendly interfaces with Figma and bringing 
+    them to life with HTML, CSS, and JavaScript. Whether it's building your site from scratch or optimizing an 
+    existing one, I focus on both aesthetics and functionality. I love helping businesses succeed with websites 
+    that not only look great but perform well. Let’s work together to create something amazing!</p>
+    <div class="center-button">
+    <button class="letsworkbutton"><a href="#Contact">Let's work together</a></button>
+    </div>
+  </section>
+
+  <div class="projects">
+
+    <div class="projectheading">
+    <h1 id="Projects">projects</h1>
+    </div>
+    <div class="portfolio-projects">
+      <a href="https://www.figma.com/design/mULYta2EROhpgPsCI8EE6A/Landing-Mock-up?node-id=0-1&p=f&t=0CRjRqoz4UhMRaVx-0 ">Landing Page (Mock up) </a>
+      <a href="https://www.figma.com/proto/KYASsq6VbbjRaTNZfiiXEJ/Jewelry-mock-up?node-id=1-4&p=f&t=pw7zH4rZf6YD6eF7-0&scaling=scale-down&content-scaling=fixed&page-id=0%3A1">Ecomers (Mock up )</a>
+      <a href="https://ghostle666.github.io/LandingPage/">Landing page. (hand coded)</a>
+    </div>  
+    </div>
 
 
+  <div class="contact">
+  
+    <h1 id="Contact">Contact</h1>
+    <div class="profiles">
+    <p><a href="https://www.upwork.com/freelancers/~01f18bd12d93635d62">Upwork</a> | <a href="https://github.com/ghostle666">Github</a></p> 
+  </div>
+
+
+  </div>
 
 </body>
 </html>
