changed links on projects

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
   <section class="about" id="About">
     <div class="aboutTitle">
-    <h1>About</h1>
+    <h1>About me</h1>
  </div>
     <p id="des">
-    "Hi, I'm Leslie, a freelance UI/UX designer and junior web developer with a passion for creating responsive,
+    Hi, I'm Leslie, a freelance UI/UX designer and junior web developer with a passion for creating responsive,
     high-converting websites. I specialize in designing clean, user-friendly interfaces with Figma and bringing 
     them to life with HTML, CSS, and JavaScript. Whether it's building your site from scratch or optimizing an 
     existing one, I focus on both aesthetics and functionality. I love helping businesses succeed with websites 
@@ -46,12 +46,19 @@
     <div class="projectheading">
     <h1 id="Projects">projects</h1>
     </div>
+
+
     <div class="portfolio-projects">
-      <a href="https://www.figma.com/design/mULYta2EROhpgPsCI8EE6A/Landing-Mock-up?node-id=0-1&p=f&t=0CRjRqoz4UhMRaVx-0 ">Landing Page (Mock up) </a>
-      <a href="https://www.figma.com/proto/KYASsq6VbbjRaTNZfiiXEJ/Jewelry-mock-up?node-id=1-4&p=f&t=pw7zH4rZf6YD6eF7-0&scaling=scale-down&content-scaling=fixed&page-id=0%3A1">Ecomers (Mock up )</a>
-      <a href="https://ghostle666.github.io/LandingPage/">Landing page. (hand coded)</a>
+
+
+      <div class="grid"><a href="Aquarium">Acuarium Landing Page (Mock up) </a></div>
+      <div class="grid"><a href="jewlery">Ecomers (Mock up)</a></div>
+      <div class="grid"><a href="fitness app">Landing page. (hand coded)</a></div>
+      <div class="grid"><a href="coming_soon">Comming soon...</a></div>
+  
     </div>  
-    </div>
+  
+  </div>
 
 
   <div class="contact">
