fixed grid and added thumbnails

--- a/index.html
+++ b/index.html
@@ -41,31 +41,35 @@
     </div>
   </section>
 
-  <div class="projects">
+  <div class="projects"  id="Projects">
 
     <div class="projectheading">
-    <h1 id="Projects">projects</h1>
+      <h1 >Projects</h1>
     </div>
-
 
     <div class="portfolio-projects">
 
-
-      <div class="grid"><a href="Aquarium">Acuarium Landing Page (Mock up) </a></div>
-      <div class="grid"><a href="jewlery">Ecomers (Mock up)</a></div>
-      <div class="grid"><a href="fitness app">Landing page. (hand coded)</a></div>
-      <div class="grid"><a href="coming_soon">Comming soon...</a></div>
+ 
+      <div class="project-grid">
+      
+        <div class="grid"><a href="https://www.notion.so/Aquarium-Landing-page-case-study-1fe99cb7f65c80b3aa39dfe82cbd9886">Acuarium Landing Page</a></div>
+        <div class="grid"><a href="https://www.notion.so/Jewelry-eCommerce-Case-study-1fb99cb7f65c80d58021fd7f385328e7">Ecommers</a></div>
+        <div class="grid"><a href="https://ghostle666.github.io/LandingPage/">Landing page.</a></div>
+        <div class="grid"><a href="coming_soon">currently working on...</a></div>
+      </div>
+     
   
-    </div>  
-  
-  </div>
+    </div>
+</div>
 
-
-  <div class="contact">
-  
-    <h1 id="Contact">Contact</h1>
+  <div id="Contact" class="contact">
+    <h1 >Contact</h1>
     <div class="profiles">
-    <p><a href="https://www.upwork.com/freelancers/~01f18bd12d93635d62">Upwork</a> | <a href="https://github.com/ghostle666">Github</a></p> 
+    <p><a href="https://www.upwork.com/freelancers/~01f18bd12d93635d62">Upwork</a> | <a href="https://github.com/ghostle666">Github</a>
+   
+      <div>
+        <button class="email"><a href="mailto:leslievdz6@gmail.com">Get In Touch</a></button>
+      </div>
   </div>
 
 
