--- a/pages/Aquarium.html
+++ b/pages/Aquarium.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aquarium Case study</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body class="AquariumBody">
     <h1>Aquarium Landing page (case study)</h1>
