--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
  
       <div class="project-grid">
       
-        <div class="grid aqua"><a href="pages/Aquarium.html"><span class="hover-text">Acuarium Landing Page</span></a></div>
-        <div class="grid Ecom"><a href="pages/Ecommers.html"><span class="hover-text">Ecommers</span></a></div>
-        <div class="grid landing"><a href="https://ghostle666.github.io/LandingPage/"><span class="hover-text"> Landing page.</span></a></div>
-        <div class="grid soon"><a href="https://github.com/ghostle666">currently working on...</a></div>
+        <div class="grid "><a class="thumbnail" href="pages/Aquarium.html"><img src="Images/heroMockup.png"><div class="hover-text">Acuarium Landing Page (UX Case study)</div></a></div>
+        <div class="grid "><a class="thumbnail" href="pages/Ecommers.html"><img src="Images/eComerce.png"><span class="hover-text">Ecommers (Case study)</span></a></div>
+        <div class="grid"><a class="thumbnail" href="https://ghostle666.github.io/LandingPage/"><img src="Images/fitneslanding.png"><span class="hover-text"> Landing page.</span></a></div>
+        <div class="grid "><a href="https://github.com/ghostle666" class="thumbnail"><img src="Images/work.jpg"><span class="hover-text">currently working on...</span></a></div>
       </div>
      
   
