media queries for small screens aquarium page

--- a/pages/Aquarium.html
+++ b/pages/Aquarium.html
@@ -63,13 +63,12 @@
 
 
     <h3 class="tt dd"> Design Decisions</h3>
-    <div class="dd2">
-    <img src="../Images/colpa.png" class="pic">
-      <img src="../Images/picture.png" class="pic">
-      <img src="../Images/CTA.png" class="cta">
-      
-</div>
-     <div class="dd2">
+      <div class="dd2">
+       <img src="../Images/colpa.png" class="pic">
+        <img src="../Images/picture.png" class="pic">
+        <img src="../Images/CTA.png" class="cta">
+      </div>
+     <div class="dd2 ddt">
       <p class="sub">Dark UI with glowing aqua accents evokes an underwater atmosphere</p>
       <p>High contrast CTAs stand out and encourage clicks without distraction</p>
       <p>Photography-led design builds emotional connection and excitement</p>
