responsiveness on ecommerce

--- a/pages/Ecommers.html
+++ b/pages/Ecommers.html
@@ -9,7 +9,7 @@
 <body class="eCommersBody">
 
 
-<h1 class="eCommerce-title"> Jewelry eCommerce. (Case study)</h1>
+<h1 class="eCommerce-title sub"> Jewelry eCommerce. (Case study)</h1>
 
 <div class="Overview">
   <h2>Project Overview</h2>
@@ -22,24 +22,34 @@
   <h3>Tools Used:</h3>
   <p>figma</p>
   </div>
-
+    <h2 class="sub">User flow</h2>
 
   <div  class="flow">
-    <h2>User flow</h2>
 
 
-    <img  class="img-flow" src="../Images/Screenshot 2025-05-24 094133.png">
 
-    <p>Homepage — Eye-catching hero with value proposition + CTA.</p>
-    <p>Product Discovery — Clean carousel and gallery layout for exploration.</p>
-    <p>Product Details — Clear specs, trust signals (ratings), and purchase options.</p>
-    <p>Cart — Easy-to-scan layout with order summary.</p>
-    <p>Contact — Transparent and minimal form to reduce user hesitation.</p>
+
+
+    <p  class="flowt">Homepage — Eye-catching hero with value proposition + CTA.</p>
+    <img src="/Images/jewlery-home.png" class="Homepage"><img>
+    <p class="flowt">Product Discovery — Clean carousel and gallery layout for exploration.</p>
+    
+    <div class="carousel">
+    <img src="/Images/carousel.png" class="car">
+    <img src="/Images/carousel2.png" class="car2">
+    </div>
+    <p class="flowt">Product Details — Clear specs, trust signals (ratings), and purchase options.</p>
+    <img src="/Images/product.png" class="Homepage">
+    <p class="flowt">Cart — Easy-to-scan layout with order summary.</p>
+   <img src="/Images/cart.png" class="Homepage">
+    <p class="flowt">Contact — Transparent and minimal form to reduce user hesitation.</p>
+    <div class="carousel">
+   <img src="/Images/jmcontact.png" class="car"><img src="/Images/jcontact.png" class="car2">
+    </div> 
   </div>
 
-
-<div>
-<h2> Design Decisions</h2>
+<h2 class="sub"> Design Decisions</h2>
+<div class="ddf">
 
 <div class="design">
   <img class="neck" src="../Images/necklacepic.png">
@@ -53,21 +63,24 @@
   <p class="DDtext">Typography is clean and luxurious, with emphasis on readability and whitespace.</p>
 
 </div>
-
+</div>
 
 <div class="Responsiveness">
 <h2 class="title">Responsiveness</h2>
-<p> mobile version was designed for seamless browsing on smaller screens. Priority was given to:</p>
+<p class="msub"> Mobile version was designed for seamless browsing on smaller screens. Priority was given to:</p>
 
-<div>
-  <p>Fixed cart CTA</p>
-<p>Simplified layout hierarchy</p>
+<div class="mobile">
+    <div>
+  <img src="/Images/mobile.png">
+  </div>
+  
+  <div class="features">
+    <p>Fixed cart CTA</p>
+    <p>Simplified layout hierarchy</p>
+    <p>Large touch targets</p>
+  </div>
+
 </div>
-
-<img src="/Images/mobile.png">
-  <p>Large touch targets</p>
-
-</ul>
 </div>
 
 <div class="Overview">
