fixed pictures and sub text

--- a/pages/Aquarium.html
+++ b/pages/Aquarium.html
@@ -69,7 +69,7 @@
         <img src="../Images/CTA.png" class="cta">
       </div>
      <div class="dd2 ddt">
-      <p class="sub">Dark UI with glowing aqua accents evokes an underwater atmosphere</p>
+      <p>Dark UI with glowing aqua accents evokes an underwater atmosphere</p>
        <p>Photography-led design builds emotional connection and excitement</p>
       <p>High contrast CTAs stand out and encourage clicks without distraction</p>
      
