--- a/pages/Ecommers.html
+++ b/pages/Ecommers.html
@@ -31,20 +31,20 @@
 
 
     <p  class="flowt">Homepage — Eye-catching hero with value proposition + CTA.</p>
-    <img src="/Images/jewlery-home.png" class="Homepage"><img>
+    <img src="../Images/jewlery-home.png" class="Homepage"><img>
     <p class="flowt">Product Discovery — Clean carousel and gallery layout for exploration.</p>
     
     <div class="carousel">
-    <img src="/Images/carousel.png" class="car">
-    <img src="/Images/carousel2.png" class="car2">
+    <img src="../Images/carousel.png" class="car">
+    <img src="../Images/carousel2.png" class="car2">
     </div>
     <p class="flowt">Product Details — Clear specs, trust signals (ratings), and purchase options.</p>
-    <img src="/Images/product.png" class="Homepage">
+    <img src="../Images/product.png" class="Homepage">
     <p class="flowt">Cart — Easy-to-scan layout with order summary.</p>
-   <img src="/Images/cart.png" class="Homepage">
+   <img src="../Images/cart.png" class="Homepage">
     <p class="flowt">Contact — Transparent and minimal form to reduce user hesitation.</p>
     <div class="carousel">
-   <img src="/Images/jmcontact.png" class="car"><img src="/Images/jcontact.png" class="car2">
+   <img src="../Images/jmcontact.png" class="car"><img src="../Images/jcontact.png" class="car2">
     </div> 
   </div>
 
