--- a/pages/Ecommers.html
+++ b/pages/Ecommers.html
@@ -71,7 +71,7 @@
 
 <div class="mobile">
     <div>
-  <img src="/Images/mobile.png">
+  <img src="../Images/mobile.png">
   </div>
   
   <div class="features">
