--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       
         <div class="grid "><a class="thumbnail" href="pages/Aquarium.html"><img src="Images/heroMockup.png"><div class="hover-text">Acuarium Landing Page (UX Case study)</div></a></div>
         <div class="grid "><a class="thumbnail" href="pages/Ecommers.html"><img src="Images/eComerce.png"><span class="hover-text">Ecommers (Case study)</span></a></div>
-        <div class="grid"><a class="thumbnail" href="https://ghostle666.github.io/LandingPage/"><img src="Images/fitneslanding.png"><span class="hover-text"> Landing page.</span></a></div>
+        <div class="grid"><a class="thumbnail" href="https://ghostle666.github.io/LandingPage/"><img src="Images/after.png"><span class="hover-text"> Landing page.</span></a></div>
         <div class="grid "><a href="https://github.com/ghostle666" class="thumbnail"><img src="Images/work.jpg"><span class="hover-text">currently working on...</span></a></div>
       </div>
      
